--- a/assets/style/cadastro2.css
+++ b/assets/style/cadastro2.css
@@ -12,9 +12,11 @@ main{
     max-width: 750px;
     border-radius: 15px;
     background-color: #fff;
-    border:1px solid black;
+    border:1px solid black;   
+}
 
-    
+.color-button{
+    background-color: #05466C;
 }
 
 form{
@@ -44,7 +46,6 @@ form{
     }
 
     button{
-        background-color: #0065FF;
         color: white;
         padding: 10px;
         border-radius: 10px;
@@ -59,6 +60,7 @@ form{
 
     .sex-options-div{
 
+        
 
         input{
             width: 20px;
@@ -82,5 +84,53 @@ form{
             justify-content: space-around;
         }
     }
-   
+    .birth{
+        display: flex;
+        flex-direction: column;
+        
+        
+    }
+}
+@media only screen and (max-width: 750px) {
+    main {
+        margin: 30px;
+    }
+    
+    .main-text {
+        font-size: 1.5em;
+    }
+
+    input, select {
+        width: 100%;
+    }
+
+    button.color-button {
+        width: auto; 
+    }
+    .sex-options-section{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-left: 10%;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    
+    main {
+        margin: 30px;
+    }
+
+    input, select {
+        width: 100%;
+    }
+    button.color-button {
+        width: auto; 
+    }
+
+    .sex-options-section{
+        display: flex;
+        flex-direction: column;
+        
+    }
 }
