--- a/assets/style/login.css
+++ b/assets/style/login.css
@@ -44,12 +44,13 @@ form{
     }
 
     button{
-        background-color: #0065FF;
+        background-color: #05466C;
         color: white;
         padding: 10px;
         border-radius: 10px;
         width: 150px;
         margin: 40px auto;
+        border: none;
 
         a{
             color: white;
@@ -86,6 +87,7 @@ form{
     .forget-password{
         margin-left: 10%;
         color: #706c6c;
+        font-size: 13px;
 
     }
 
@@ -99,5 +101,23 @@ form{
         color: #367BBC;
         text-align: center;
         padding-bottom: 5%;
+    }
+
+}
+@media only screen and (max-width: 600px) {
+    main {
+        margin: 30px;
+    }
+    
+    .main-text {
+        font-size: 1.5em;
+    }
+
+    input, select {
+        width: 100%;
+    }
+
+    button.color-button {
+        width: auto; 
     }
 }
