--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -7,7 +7,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 20px;
+    padding: 20px;
 }
 
 header img{
@@ -24,18 +24,30 @@ header img{
 
 .open-menu{
     position: fixed;
-    border-top: 2px solid black;
-    width: 75%;
-    height: 100%;
+    height: 92%;
+    width: 70%;
     background-color: #fff;
 
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 
     .open-menu-options{
         padding: 20px;
         display: flex;
         align-items: center;
         gap: 20px;
+    }
+}
+
+.open-header{
+    top: 0  ;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    
+    header{
+        background-color: #fff;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.6);
     }
 }
