--- a/assets/style/footer.css
+++ b/assets/style/footer.css
@@ -8,8 +8,7 @@ footer{
     align-items: center;
     justify-content: space-between;
     padding: 30px;
-    
-
+    gap: 15px;
 }
 
 .logo-jlle{
@@ -21,7 +20,7 @@ footer{
     align-items: center;
     color: white;
     gap: 10px;
-    font-size: 1.2em;
+    font-size: 1.0em;
     padding: 20px;
 }
 
