--- a/assets/style/cadastro2.css
+++ b/assets/style/cadastro2.css
@@ -50,7 +50,7 @@ form{
         padding: 10px;
         border-radius: 10px;
         width: 150px;
-        margin: 40px auto;
+        margin: 20px auto;
 
         a{
             color: white;
@@ -91,13 +91,13 @@ form{
         
     }
 }
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 800px) {
     main {
-        margin: 30px;
+        margin: 25px;
     }
     
     .main-text {
-        font-size: 1.5em;
+        font-size: 1.2em !important;
     }
 
     input, select {
@@ -118,7 +118,7 @@ form{
 @media only screen and (max-width: 600px) {
     
     main {
-        margin: 30px;
+        margin: 25px;
     }
 
     input, select {
@@ -127,10 +127,12 @@ form{
     button.color-button {
         width: auto; 
     }
-
     .sex-options-section{
         display: flex;
         flex-direction: column;
-        
     }
+    .main-text{
+        font-size: 1.2em !important;
+    }
+    
 }
