--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -3,6 +3,11 @@
     margin: 0;
 }
 
+.content {
+    filter: grayscale(0.5);
+    background-color: rgba(0, 0, 0, 0.35);
+}
+
 header{
     display: flex;
     align-items: center;
@@ -41,6 +46,7 @@ header img{
 }
 
 .open-header{
+    z-index: 1;
     top: 0  ;
     position: fixed;
     width: 100%;
