refact: add header on Login oages

--- a/assets/style/cadastro.css
+++ b/assets/style/cadastro.css
@@ -20,6 +20,7 @@ main{
 
 .color-button{
     background-color: #05466C;
+    border: none;
 
 }
 
@@ -52,7 +53,7 @@ form{
     button{
         color: white;
         padding: 10px;
-        border-radius: 10px;
+        border-radius: 2px;
         width: 150px;
         margin: 40px auto;
 
