--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,6 +5,9 @@
     padding: 0;
     font-family: "Poppins", sans-serif;
 }
+main{
+    padding-top: 100px;
+}
 
 #paralelograms {
     margin-top: 10%;
