--- a/assets/style/login.css
+++ b/assets/style/login.css
@@ -6,6 +6,9 @@
     font-family: "Poppins", sans-serif;
 }
 
+.container{
+    padding-top: 100px;
+}
 
 main{
     margin: 80px auto;
@@ -18,6 +21,7 @@ main{
 }
 
 form{
+
     .main-text{
         font-size: 2em;
         padding: 20px 10%;
