--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -9,7 +9,6 @@
     background-color: rgba(0, 0, 0, 0.35) ;
 }
 
-
 header{
     top: 0;
     position: fixed;
@@ -19,7 +18,7 @@ header{
     align-items: center;
     justify-content: center;
     gap: 65%;
-    z-index: 2;
+    z-index: 3;
     padding: 20px 0;
 }
 
@@ -80,6 +79,6 @@ button{
     z-index: 2;
 }
 
-input{
-    z-index: 400;
+input, select{
+    z-index: 2;
 }
