--- a/assets/style/footer.css
+++ b/assets/style/footer.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family: "Poppins", sans-serif;
+}
+
 footer{
     background-color: #05466C;
     margin-top: 100px;
