--- a/assets/style/carousel.css
+++ b/assets/style/carousel.css
@@ -1,4 +1,4 @@
-* {box-sizing: border-box}
+/* * {box-sizing: border-box} */
 body {font-family: Verdana, sans-serif; margin:0}
 .mySlides {display: none}
 img {vertical-align: middle;}
