--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -10,6 +10,15 @@
     background-color: rgba(0, 0, 0, 0.20) ;
 }
 
+.dark-side{
+    z-index: 4;
+    position: fixed;
+    width: 30%;
+    height: 100%;
+    right: 0;
+}
+
+
 header{
     top: 0;
     position: fixed;
